--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,6 +1,3 @@
----
----
-
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
@@ -24,22 +21,17 @@ h6, .h6 {
 
 @media (min-width: 1200px) {
   .container {
-    width: 1229px;
+    width: 1000px;
   }
 }
-
-
-/*
- * Masthead for nav
- */
 
 .blog-masthead {
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+  text-align: left;
 }
 
-/* Nav links */
 .blog-nav-item {
   position: relative;
   display: inline-block;
@@ -53,28 +45,9 @@ h6, .h6 {
   text-decoration: none;
 }
 
-/* Active state gets a caret at the bottom */
 .blog-nav .active {
   color: #fff;
 }
-/*.blog-nav .active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  vertical-align: middle;
-  content: " ";
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid;
-  border-left: 5px solid transparent;
-}*/
-
-
-/*
- * Blog name and description
- */
 
 .blog-header {
   padding-top: 20px;
@@ -91,17 +64,15 @@ h6, .h6 {
   color: #999;
 }
 
-
-/*
- * Main column and sidebar layout
- */
+.left{
+  float: right;
+}
 
 .blog-main {
   font-size: 18px;
   line-height: 1.5;
 }
 
-/* Sidebar modules for boxing content */
 .sidebar-module {
   padding: 15px;
   margin: 0 -15px 15px;
@@ -121,7 +92,7 @@ h6, .h6 {
 /* Pagination */
 .pager {
   margin-bottom: 60px;
-  text-align: left;
+  text-align: center;
 }
 .pager > li > a {
   width: 140px;
@@ -130,35 +101,67 @@ h6, .h6 {
   border-radius: 30px;
 }
 
-
-/*
- * Blog posts
- */
-
 .blog-post {
   margin-bottom: 60px;
 }
 .blog-post-title {
   margin-bottom: 5px;
-  font-size: 40px;
+  font-size: 35px;
 }
 .blog-post-meta {
   margin-bottom: 20px;
   color: #999;
 }
 
-
-/*
- * Footer
- */
-
 .blog-footer {
   padding: 40px 0;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
+
+.nounderline{text-decoration: none !important}
+
+.post-preview > a {
+  color: #333333;
+}
+.post-preview > a:hover,
+.post-preview > a:focus {
+  text-decoration: none;
+  color: #0085A1;
+}
+.post-preview > a > .post-title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-family: serif;
+}
+.post-preview > a > .post-subtitle {
+  margin: 0;
+  margin-bottom: 10px;
+}
+.post-preview > .post-meta {
+  color: #777777;
+  font-size: 18px;
+  font-style: italic;
+  margin-top: 0;
+}
+.post-preview > .post-meta > a {
+  text-decoration: none;
+  color: #333333;
+}
+.post-preview > .post-meta > a:hover,
+.post-preview > .post-meta > a:focus {
+  color: #0085A1;
+  text-decoration: underline;
+}
+@media only screen and (min-width: 768px) {
+  .post-preview > a > .post-title {
+    font-size: 36px;
+  }
