--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -1,17 +1,14 @@
----
----
 a,
 a:focus,
 a:hover {
   color: #fff;
 }
 
-/* Custom default button */
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
   color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+  text-shadow: none;
   background-color: #fff;
   border: 1px solid #fff;
 }
@@ -28,7 +25,6 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
 }
 
 body {
@@ -37,7 +33,6 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
   width: 100%;
@@ -55,7 +50,6 @@ body {
   margin-left: auto;
 }
 
-/* Padding for spacing */
 .inner {
   padding: 30px;
 }
@@ -118,7 +112,6 @@ body {
 
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
   .masthead {
     position: fixed;
     top: 0;
@@ -127,11 +120,9 @@ body {
     position: fixed;
     bottom: 0;
   }
-  /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
   }
-  /* Handle the widths */
   .masthead,
   .mastfoot,
   .cover-container {
@@ -146,5 +137,4 @@ body {
     width: 700px;
   }
 }
-
 .nounderline{text-decoration: none !important}
