--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,4 +10,4 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href='{{ "assets/css/main.css" | absolute_url }}' rel="stylesheet">
