--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Deep Learning Blogs</a>
-          <a class="blog-nav-item active left" href="#">About</a>
+          <a class="blog-nav-item active" href='{{ "/blogs" | absolute_url }}'>Deep Learning Blogs</a>
+          <a class="blog-nav-item active left" href='{{ "/about" | absolute_url }}'>About</a>
         </nav>
       </div>
     </div>
