--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-    <link href="assets/css/blog.css" rel="stylesheet">
+    <link href='{{ "assets/css/blog.css" | absolute_url }}' rel="stylesheet">
   </head>
   <body>
 
@@ -23,9 +23,38 @@
         </div>
     </div>
 
+    <div class="container">
+      {% if page.comments %}
+
+      <div id="disqus_thread"></div>
+      <script>
+
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+      var disqus_config = function () {
+      this.page.url = '{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = '{{ page.identifier }}' ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = '//zaffnet.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
+
+      {% endif %}
+    </div>
+
     <footer class="blog-footer">
       <div class="container">
-        <p>Proudly hosted by
+        <p>Hosted with ❤ by
           <a href="https://github.com" class="nounderline" target="_blank">Github</a> using
           <a href="https://jekyllrb.com" class="nounderline" target="_blank">Jakyll</a> and
           <a href="http://getbootstrap.com" class="nounderline" target="_blank">Bootstrap</a></p>
