--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -141,6 +141,7 @@ h6, .h6 {
   margin-top: 30px;
   margin-bottom: 10px;
   font-family: serif;
+  font-size: 20px;
 }
 .post-preview > a > .post-subtitle {
   margin: 0;
