--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Deep Learning Tutorial">
     <meta name="author" content="zaffnet">
+    <meta name="google-site-verification" content="Ry_NIMOQWDM4ilISBn-Od4bAlgSAKWIGs1hKFyBMLbY" />
     <title>{{ page.title }}</title>
     <!-- google-site-verification: googlee1a02f6d45541f17.html -->
     <script>
