--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@
       <div class="container">
         <p>Hosted with ❤ by
           <a href="https://github.com" class="nounderline" target="_blank">Github</a> using
-          <a href="https://jekyllrb.com" class="nounderline" target="_blank">Jakyll</a> and
+          <a href="https://jekyllrb.com" class="nounderline" target="_blank">Jekyll</a> and
           <a href="http://getbootstrap.com" class="nounderline" target="_blank">Bootstrap</a></p>
       </div>
     </footer>
