--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,6 @@
       ga('create', 'UA-90177266-1', 'auto');
       ga('send', 'pageview');
     </script>
-
+    <link rel="icon" href="{{ "assets/favicon.ico" | absolute_url }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='{{ "assets/css/main.css" | absolute_url }}' rel="stylesheet">
