--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Deep Learning Tutorial">
     <meta name="author" content="zaffnet">
     <meta name="google-site-verification" content="Ry_NIMOQWDM4ilISBn-Od4bAlgSAKWIGs1hKFyBMLbY" />
+    <meta name="msvalidate.01" content="C98CDD5D490485F7384028B8A0EF655C" />
     <title>{{ page.title }}</title>
     <!-- google-site-verification: googlee1a02f6d45541f17.html -->
     <script>
