Improved meta tag

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Deep Learning Tutorial">
+    <meta name="description" content="Deep Learning Blogs by Zafarullah Mahmood (zaffnet) zafarullahmahmood@gmail.com Covers Deep Convolutional Networks and other architectures for image recognition">
     <meta name="author" content="zaffnet">
     <meta name="google-site-verification" content="Ry_NIMOQWDM4ilISBn-Od4bAlgSAKWIGs1hKFyBMLbY" />
     <meta name="msvalidate.01" content="C98CDD5D490485F7384028B8A0EF655C" />
