Added time to read

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@
     <footer class="blog-footer">
       <div class="container">
         <p>Hosted with ❤ by
-          <a href="https://github.com" class="nounderline" target="_blank">Github</a> using
+          <a href="https://github.com" class="nounderline" target="_blank">GitHub</a> using
           <a href="https://jekyllrb.com" class="nounderline" target="_blank">Jekyll</a> and
           <a href="http://getbootstrap.com" class="nounderline" target="_blank">Bootstrap</a></p>
       </div>
