--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,26 +3,30 @@ body {
   color: #555;
 }
 
-/*.blog-main > h1, .h1,
+.blog-main > h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: 50px !important;
-  margin-bottom: 20px !important;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 40px !important;
+  margin-bottom: 10px !important;
   font-weight: normal;
   color: #333;
-}*/
+}
 
-/*
- * Override Bootstrap's default container.
- */
+.blog-post-title {
+  text-align: left !important;
+}
+
+.panel-title {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
 
 @media (min-width: 1200px) {
   .container {
-    width: 800px;
+    width: 900px;
   }
 }
 
@@ -50,20 +54,6 @@ h6, .h6 {
   color: #fff;
 }
 
-.blog-header {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-.blog-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-  font-size: 60px;
-  font-weight: normal;
-}
-.blog-description {
-  font-size: 20px;
-  color: #999;
-}
 
 .left{
   float: right;
@@ -74,37 +64,10 @@ h6, .h6 {
   line-height: 1.5;
 }
 
-.sidebar-module {
-  padding: 15px;
-  margin: 0 -15px 15px;
-}
-.sidebar-module-inset {
-  padding: 15px;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
-}
-
-
-/* Pagination */
-.pager {
-  margin-bottom: 60px;
-  text-align: center;
-}
-.pager > li > a {
-  width: 140px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
-}
-
 .blog-post {
   margin-bottom: 60px;
 }
+
 .blog-post-title {
   margin-bottom: 5px;
   font-size: 35px;
@@ -148,9 +111,6 @@ h6, .h6 {
   font-size: 100% !important;
 }
 .post-preview > .post-title {
-  /*margin-top: 30px;*/
-  /*margin-bottom: 10px;*/
-  /*font-family: serif;*/
   font-size: 22px !important;
 }
 .post-preview > .post-subtitle {
@@ -173,7 +133,6 @@ h6, .h6 {
   text-decoration: underline;
 }
 
-
 @media only screen and (min-width: 768px) {
   }
 
@@ -190,3 +149,4 @@ h6, .h6 {
     color: #333;
     background-color: rgba(185, 187, 191, 0.12);
     border-color: #adadad;
+  }
