--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -69,7 +69,7 @@ h6, .h6 {
 }
 
 .blog-post-title {
-  margin-bottom: 5px;
+  margin-bottom: 60px !important;
   font-size: 35px;
 }
 .blog-post-meta {
