--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<a href="#" class="back-to-top" style="display: none;"><i class="fa fa-arrow-circle-up"></i></a>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script>
@@ -70,5 +71,44 @@ switchAccordion = function(e) {
 })();
 </script>
 <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
+<script>
+
+jQuery(document).ready(function() {
+
+var offset = 250;
+
+var duration = 300;
+
+jQuery(window).scroll(function() {
+
+if (jQuery(this).scrollTop() > offset) {
+
+jQuery('.back-to-top').fadeIn(duration);
+
+} else {
+
+jQuery('.back-to-top').fadeOut(duration);
+
+}
+
+});
+
+
+
+jQuery('.back-to-top').click(function(event) {
+
+event.preventDefault();
+
+jQuery('html, body').animate({scrollTop: 0}, duration);
+
+return false;
+
+})
+
+});
+
+</script>
+
 </body>
 </html>
