--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,3 +29,5 @@
     <link rel="icon" href="{{ "assets/favicon.ico" | absolute_url }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='{{ "assets/css/main.css" | absolute_url }}' rel="stylesheet">
+    <script src="https://use.fontawesome.com/fe7e46e867.js"></script>
+    <!-- <link rel=”stylesheet” id=”font-awesome-css” href=”//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css” type=”text/css” media=”screen”> -->
