--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,6 @@ $(document).ready(function () {
 	$( ".highlighttable" ).wrap("<div class='table-responsive'></div>");
 });
 
-
-
-//uses classList, setAttribute, and querySelectorAll
-//if you want this to work in IE8/9 youll need to polyfill these
 (function(){
 	var d = document,
 	accordionToggles = d.querySelectorAll('.js-accordionTrigger'),
@@ -23,7 +19,6 @@ $(document).ready(function () {
     e.preventDefault();
     e.target.click();
   }
-
 		setAriaAttr = function(el, ariaType, newProperty){
 		el.setAttribute(ariaType, newProperty);
 	};
@@ -41,7 +36,6 @@ $(document).ready(function () {
 				break;
 		}
 	};
-//function
 switchAccordion = function(e) {
   console.log("triggered");
 	e.preventDefault();
@@ -73,41 +67,19 @@ switchAccordion = function(e) {
 <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 <script>
-
-jQuery(document).ready(function() {
-
-var offset = 250;
-
-var duration = 300;
-
-jQuery(window).scroll(function() {
-
-if (jQuery(this).scrollTop() > offset) {
-
-jQuery('.back-to-top').fadeIn(duration);
-
-} else {
-
-jQuery('.back-to-top').fadeOut(duration);
-
-}
-
-});
-
-
-
-jQuery('.back-to-top').click(function(event) {
-
-event.preventDefault();
-
-jQuery('html, body').animate({scrollTop: 0}, duration);
-
-return false;
-
-})
-
-});
-
+	jQuery(document).ready(function() {
+	var offset = 250;
+	var duration = 300;
+	jQuery(window).scroll(function() {
+	if (jQuery(this).scrollTop() > offset) {
+	jQuery('.back-to-top').fadeIn(duration);
+	} else {
+	jQuery('.back-to-top').fadeOut(duration);
+	}});
+	jQuery('.back-to-top').click(function(event) {
+	event.preventDefault();
+	jQuery('html, body').animate({scrollTop: 0}, duration);
+	return false;})});
 </script>
 
 </body>
