--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,8 @@
 
     </div>
 
+    <a href="#" class="back-to-top" style="display: none;"><i class="fa fa-arrow-circle-up"></i></a>
+
     <footer class="blog-footer">
       <div class="container">
         <p>Hosted with ❤ by
