--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,6 +79,9 @@ switchAccordion = function(e) {
 	event.preventDefault();
 	jQuery('html, body').animate({scrollTop: 0}, duration);
 	return false;})});
+
+
+	$(".highlight").prepend("<button class='btn' data-clipboard-snippet><img class='clippy' width='13' src='assets/clippy.svg' alt='Copy to clipboard'></button>");
 </script>
 
 </body>
