--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{% if page.desc %}{{ page.desc | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="author" content="zaffnet">
+    <meta property="og:site_name"          content="Deep Learning Blogs"/>
+    <meta property="og:url"                content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <meta property="og:type"               content="article" />
+    {% if page.title == null %}
+    <meta property="og:title"              content="Deep Learning Blogs" />
+    {% else %}
+    <meta property="og:title"              content="{{ page.title }}" />
+    {% endif %}
+    <meta property="og:description"        content="{% if page.desc %}{{ page.desc | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+    {% if page.og_image_url == null %}
+    <meta property="og:image"              content="{{ '/assets/og_image.jpg' | prepend: site.baseurl | prepend: site.url }}" />
+    {% else %}
+    <meta property="og:image"              content="{{ page.og_image_url | prepend: site.baseurl | prepend: site.url }}" />
+    {% endif %}
+    <meta property="fb:app_id"              content="1351774508219707" />
     <meta name="google-site-verification" content="Ry_NIMOQWDM4ilISBn-Od4bAlgSAKWIGs1hKFyBMLbY" />
     <meta name="msvalidate.01" content="C98CDD5D490485F7384028B8A0EF655C" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
