--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,3 +135,39 @@ background-color: rgba(255, 255, 255, 0);
 .back-to-top  i {
   font-size: 40px;
 }
+
+/* ZeroClipboard styles */
+
+.zero-clipboard {
+    position: relative;
+    display: none;
+}
+.btn-clipboard {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    display: block;
+    padding: 5px 8px;
+    font-size: 12px;
+    color: #777;
+    cursor: pointer;
+    background-color: rgba(220, 220, 220, 0.45);
+    /*border: 1px solid #e1e1e8;*/
+    border-radius: 0 4px 0 4px;
+}
+.btn-clipboard-hover {
+    /*color: #fff;*/
+    /*background-color: #428bca;*/
+    /*border-color: #428bca;*/
+}
+
+@media (min-width: 768px) {
+    .zero-clipboard {
+        display: block;
+    }
+    .zero-clipboard .btn-clipboard {
+        /*top: -16px;*/
+        border-top-right-radius: 0;
+    }
+}
